@@ -5,4 +5,6 @@
 </toolbar-select-document>
 <div class="inspection-inspect-document">
     <p>inspect-document works!</p>
+    <p>Selected Collection: {{selectedCollection.name}}</p>
+    <p>Selected Document:   {{selectedDocument.name}}</p>
 </div>
