@@ -13,6 +13,9 @@ export class InspectDocumentComponent extends MainComponent implements OnInit {
   @Input() showDocumentSelectionToolbar: boolean = true;
   @Input() allowMultipleCollections: boolean = false;
   @Input() allowMultipleDocuments: boolean = false;
+
+  selectedCollection = {};
+  selectedDocument   = {};
   
   super() { }
   
@@ -21,10 +24,13 @@ export class InspectDocumentComponent extends MainComponent implements OnInit {
 
   onCollectionsChange(event) {
     // console.error("InspectDocumentComponent: onCollectionChange()", event);
+    this.selectedCollection = event;
+    this.selectedDocument   = {};
   }
 
   onDocumentsChange(event) {
     // console.error("InspectDocumentComponent: onDocumentChange()", event);
+    this.selectedDocument = event;
   }
 
 }
