@@ -2,7 +2,6 @@
   "/api": {
     "target": {
         "host": "vast.ellogon.org",
-        "host": "annotation.ellogon.org",
         "protocol": "https:",
         "port": 443
     },
